--- a/src/Website/src/app/topic-modal/topic-modal.component.html
+++ b/src/Website/src/app/topic-modal/topic-modal.component.html
@@ -41,6 +41,12 @@
         <ng-select [items]="capabilities" [(ngModel)]="item.demands" [addTag]="true" [hideSelected]="true" [multiple]="true" appendTo="body" #capabilitiesElement></ng-select>
       </div>
     </div>
+    <div class="field">
+      <label class="label">Difficulty</label>
+      <div class="control slidercontrol">
+        <app-difficulty-slider [(ngModel)]="item.difficulty"></app-difficulty-slider>
+      </div>
+    </div>
   </div>
 
   <div *ngIf="selectedTab === 'feedback' && item.id != null">
